// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Link Default usage 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c1 {
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:360px) {
  .c0 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<span
  className="c0"
  color={[Function]}
  type="secondary"
>
  <a
    className="c1"
    href="/startpage"
    onClick={[Function]}
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link Link with _blank target 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c1 {
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:360px) {
  .c0 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<span
  className="c0"
  color={[Function]}
  type="secondary"
>
  <a
    className="c1"
    href="/www.google.com"
    onClick={[Function]}
    target="_blank"
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link Link with rel as nofollow 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c1 {
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:360px) {
  .c0 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<span
  className="c0"
  color={[Function]}
  type="secondary"
>
  <a
    className="c1"
    href="/www.google.com"
    onClick={[Function]}
    rel="nofollow"
  >
    Link
  </a>
</span>
`;
